2001-02-05  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/pt-initfini.c: New file.

2001-02-02  Ulrich Drepper  <drepper@redhat.com>

	* Versions: Remove __pthread_initialize_minimal.

2001-02-01  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Add rules to build crti.o and make it being used in
	building libpthread.so.
	* sysdeps/i386/Makefile: New file.
	* sysdeps/pthread/pt-initfini.c: New file.

	* pthread.c: Cleanups.

2001-01-28  Andreas Jaeger  <aj@suse.de>

	* oldsemaphore.c (__old_sem_init): Adjust for last change.
	* sysdeps/pthread/bits/libc-lock.h: Likewise.
	* spinlock.c: Likewise.

2001-01-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/initspin.h: Make all names namespace clean.
	* sysdeps/unix/sysv/linux/hppa/bits/initspin.h: Likewise.
	* manager.c: Adjust for namespace cleanup in bits/initspin.h.
	* pthread.c: Likewise.
	* spinlock.h: Likewise.
	* sysdeps/pthread/pthread.h: Likewise.

2001-01-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/pthreadtypes.h: Define pthread_attr_t also
	as struct __pthread_attr_s.

	* semaphore.h (sem_t): Cleanup namespace, rename status and
	spinlock elements.

2001-01-13  Jakub Jelinek  <jakub@redhat.com>

	* pthread.c (pthread_onexit_process): Clear
	__pthread_manager_thread_bos after freeing it.
	* Makefile (tests): Add ex16.
	* Examples/ex16.c: New file.

2001-01-11  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (CFLAGS-pthread.c): Pass -DHAVE_Z_NODELETE if ld supports
	-z nodelete.
	* pthread.c (pthread_exit_process): Rename to...
	(pthread_onexit_process): ...this.
	(pthread_atexit_process, pthread_atexit_retcode): New.
	(pthread_initialize): Call __cxa_atexit instead of __cxa_on_exit
	and only if HAVE_Z_NODELETE is not defined.
	(__pthread_initialize_manager): Register pthread_atexit_retcode
	with __cxa_atexit.

2001-01-11  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (pthread_initialize): Use __cxs_on_exit not __cxa_atexit.
